[workspace]
resolver = "2"
members = [
    "nimbus",
    "arc-lightning",
    "lightning-bolt",
    "thundergods-wrath",
]

[workspace.package]
publish = false
edition = "2021"
rust-version = "1.72"

[workspace.dependencies]
actix-web = "4.4.0"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
