[package]
name = "thundergods-wrath"
description = "Main server that keeps logs and statuses"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
diesel = { version = "2.1.3", features = ["r2d2", "postgres"] }
dotenvy.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
uuid.workspace = true
